--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="src/assets/images/sunnyside-desktop.webp"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:url" content="https://kayeddy.xyz" />
+    <meta property="og:url" content="https://portfolio.kayeddy.online" />
     <meta
       name="description"
       content="An independent fullstack developer and designer specialized in empowering startups and small businesses. Find your space in the digital landscape."
